# sandbox-addon-test

./: CMakeLists.txt  main_child.cpp  main_parent.cpp
xbmc/addons/kodi-dev-kit/src/: CMakeLists.txt
xbmc/addons/kodi-dev-kit/src/child/: CMakeLists.txt  Processor.cpp  Processor.h
xbmc/addons/kodi-dev-kit/src/child/kodi/: General.cpp  General.h
xbmc/addons/kodi-dev-kit/src/sandbox/: CMakeLists.txt  ShareProcessReceiver.cpp  ShareProcessReceiver.h  ShareProcessTransmitter.cpp  ShareProcessTransmitter.h  SharedMemControl.cpp  SharedMemControl.h  SharedMemControlPosix.cpp  SharedMemControlPosix.h  shared_data_structure.h  shared_process_func_child.h  shared_process_func_parent.h
xbmc/addons/kodi-dev-kit/src/server/: CMakeLists.txt  Launcher.cpp  Launcher.h  LauncherPosix.cpp  LauncherPosix.h
xbmc/addons/kodi-dev-kit/src/server/utils/: Log.cpp  Log.h  Utils.h
